--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
+    "mongoose": "^5.3.13",
+    "nodemailer": "^4.7.0",
+    "path": "^0.12.7",
+    "qs": "^6.5.2",
     "swiper": "^4.4.2",
     "vue": "^2.5.17",
     "vue-cli": "^2.9.6",
