--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "ly-tab": "^2.1.2",
     "mint-ui": "^2.2.13",
     "mongoose": "^5.3.13",
     "nodemailer": "^4.7.0",
